--- a/CircleTipsApp/CircleTips/src/main/res/values/strings.xml
+++ b/CircleTipsApp/CircleTips/src/main/res/values/strings.xml
@@ -2,5 +2,6 @@
 <resources>
 
     <string name="app_name">CircleTips</string>
+    <string name="loading_achievements">Loading achievements...</string>
 
 </resources>
