--- a/CircleTipsApp/CircleTips/src/main/res/values/strings.xml
+++ b/CircleTipsApp/CircleTips/src/main/res/values/strings.xml
@@ -1,9 +1,14 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
 
+    <string name="title_activity_preview">PreviewActivity</string>
+
     <string name="app_name">CircleTips</string>
     <string name="loading_achievements">Loading achievements...</string>
-    <string name="title_activity_preview">PreviewActivity</string>
-    <string name="action_settings">Settings</string>
+    <string name="choose_direction">Choose one of direction</string>
+
+    <string name="health">Health</string>
+    <string name="communicate">Communication</string>
+    <string name="play">Entertainment</string>
 
 </resources>
